modules-src/wiki/1.3.1/CHANGELOG.md
# Wiki – Versionsverlauf

## 1.3.1 - 2026-09-20

- Modul-Icon und Kategorie-Definition im Manifest (module.json) verankert für modulare Präsentation.

## 1.3.0 - 2026-09-08

- Als eigenständiges Modul-v2-Paket mit sicherer v1-Adoption veröffentlicht.
- Synchronisierte Inhalte in lifecycle-verwalteten Modulstorage überführt.
- DataPortability-Provider über den neutralen Capability-Vertrag angebunden.

## 1.2.0 - 2026-09-04

- Persistenten lokalen Suchindex, gewichtetes Ranking und fehlertolerante Suche ergänzt.
- Live-Suche und geschützten manuellen Index-Neuaufbau eingeführt.

## 1.1.2 - 2026-09-03

- Lokalen Ordner-Picker für GitHub-Quellen korrekt ausgeblendet.

## 1.1.1 - 2026-09-03

- Unkonfigurierte Quellen nach einem Upgrade sicher behandelt.

## 1.1.0 - 2026-09-03

- Sichere lokale Dokumentationsquellen ergänzt.
- Konfigurierte und zuletzt erfolgreich aktive Quelle getrennt.

## 1.0.0 - 2026-09-03

- Erste öffentliche Modulversion mit GitHub-Synchronisation, lokalem Cache, Seitenbaum und Markdown-Darstellung.
